# video_detect

./: .gitignore  README.md  __init__.py  cli.py  config.yaml  pyproject.toml  pytest.ini
.claude/agents/: code-reviewer.md  tech-lead.md  ux-reviewer.md
downloader/: __init__.py  base.py  direct_url.py  facebook.py  generic.py  instagram.py  manager.py  tiktok.py  tiktok_nowm.py  twitter.py  utils.py  youtube.py
processor/: fingerprint_remover.py  image_transform.py  metadata_cleaner.py  pipeline.py  video_transform.py  watermark_remover.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/test_api/: test_endpoints.py
tests/test_detector/: __init__.py  test_cnn_detector.py  test_fingerprint_analyzer.py  test_watermark_detector.py
tests/test_processor/: __init__.py  test_pipeline.py  test_watermark_remover.py
tests/test_utils/: test_ffmpeg_wrapper.py  test_quality_assessment.py
utils/: __init__.py  ffmpeg_wrapper.py  helpers.py
video_detect/: __init__.py  api.py  cli.py
video_detect/detector/: __init__.py  audio_detector.py  cnn_detector.py  fingerprint_analyzer.py  text_detector.py  watermark_detector.py
video_detect/plugins/: README.md  __init__.py
video_detect/processor/: __init__.py  content_inpainting.py  fingerprint_remover.py  image_transform.py  metadata_cleaner.py  parallel_processor.py  video_transform.py  watermark_remover.py
video_detect/training/: __init__.py
video_detect/utils/: __init__.py  ffmpeg_wrapper.py  gpu_helper.py  helpers.py  quality_assessment.py  resource_manager.py
(+2 files in other folders)
